# unifi_backups

./: .env.example  .gitignore  README.md  docker-compose.prod.yaml  docker-compose.yaml  setup.sh  unifi_backups_site_plan.md
.github/workflows/: ci.yml  docker-publish.yml
backend/: entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  database.py  dependencies.py  init_admin.py  main.py
backend/app/models/: __init__.py  backup.py  device.py  schedule.py  settings.py  user.py
backend/app/routers/: __init__.py  auth.py
backend/app/schemas/: __init__.py  backup.py  device.py  schedule.py  settings.py  user.py
backend/app/services/: __init__.py  auth_service.py  crypto_service.py
backend/tests/: __init__.py  conftest.py  test_auth_router.py  test_auth_service.py  test_config.py  test_crypto_service.py  test_health.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx-frontend.conf
frontend/: eslint.config.js  index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/__tests__/: app.test.js
frontend/src/__tests__/api/: index.test.js
frontend/src/__tests__/router/: index.test.js
frontend/src/__tests__/stores/: auth.test.js  (+2 more)
frontend/src/api/: index.js
frontend/src/assets/: themes.css
frontend/src/router/: index.js
frontend/src/stores/: auth.js  notifications.js  theme.js
frontend/src/views/: BackupsView.vue  DashboardView.vue  DevicesView.vue  LoginView.vue  SchedulesView.vue  SettingsView.vue
(+16 files in other folders)
